<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <!--  Subpages Nav  -->
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_safety"
            android:icon="@drawable/ic_menu_safety"
            android:title="@string/safety_plan" />
        <item
            android:id="@+id/nav_questionnaire"
            android:icon="@drawable/ic_menu_questionnaire"
            android:title="@string/questionnaire" />
        <item
            android:id="@+id/nav_emergency"
            android:icon="@drawable/ic_menu_emergency"
            android:title="@string/emergency_info" />
        <item
            android:id="@+id/nav_support"
            android:icon="@drawable/ic_menu_support"
            android:title="@string/support_connect" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/notifications" />
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/bot_menu_exit"
            android:title="@string/exit" />

        <item
            android:id="@+id/nav_reminders"
            android:icon="@drawable/ic_reminder"
            android:title="@string/menu_reminders"
            app:destination="@id/nav_reminders" />
    </group>
</menu>