<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/emergency_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/emergency_input_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="name"
            android:inputType="text"
            android:maxLength="30"
            android:hint="@string/hint_name" />
        <EditText
            android:id="@+id/emergency_input_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="relationship"
            android:inputType="text"
            android:maxLength="40"
            android:hint="@string/hint_relationship" />
        <EditText
            android:id="@+id/emergency_input_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="contact"
            android:inputType="text"
            android:maxLength="40"
            android:hint="@string/hint_contact"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>